--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "comfyui-if_ai_hfdownloadernode"
 description = "downloads repos from HF please read the readme since is a bit confusing to use sorry:)"
 version = "1.0.0"
 license = "LICENSE"
-dependencies = ["Pillow", "requests", "opencv-python", "IPython", "huggingface_hub", "groq", "openai", "anthropic", "moviepy", "numpy"]
+dependencies = ["huggingface_hub"]
 
 [project.urls]
 Repository = "https://github.com/if-ai/ComfyUI-IF_AI_tools"
@@ -11,5 +11,5 @@ Repository = "https://github.com/if-ai/ComfyUI-IF_AI_tools"
 
 [tool.comfy]
 PublisherId = "impactframes"
-DisplayName = "ComfyUI-IF_AI_tools"
+DisplayName = "ComfyUI-IF_AI_HFdownloader"
 Icon = "💥🎞️"
