--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,8 @@
 name = "comfyui-if_ai_hfdownloadernode"
 description = "Downloads repos/spaces and individual files from HuggingFace"
 version = "1.0.1"
-license = "LICENSE"
-dependencies = ["huggingface_hub"]
+license = { file = "LICENSE.txt" } 
+dependencies = ["huggingface_hub", "python-dotenv", "aiohttp", "tqm"]
 
 [project.urls]
 Repository = "https://github.com/if-ai/ComfyUI-IF_AI_tools"
@@ -11,5 +11,5 @@ Repository = "https://github.com/if-ai/ComfyUI-IF_AI_tools"
 
 [tool.comfy]
 PublisherId = "impactframes"
-DisplayName = "ComfyUI-IF_AI_HFdownloader"
-Icon = "💥🎞️"
+DisplayName = "ComfyUI_IF_AI_HFdownloader"
+Icon = ""
