--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "comfyui-if_ai_hfdownloadernode"
 description = "Downloads repos/spaces and individual files from HuggingFace"
 version = "1.0.4"
-license = { file = "LICENSE.txt" } 
+license = { file = "MIT License" }
 dependencies = ["huggingface_hub", "python-dotenv", "aiohttp", "tqm"]
 
 [project.urls]
@@ -11,5 +11,5 @@ Repository = "https://github.com/if-ai/ComfyUI-IF_AI_tools"
 
 [tool.comfy]
 PublisherId = "impactframes"
-DisplayName = "ComfyUI_IF_AI_HFdownloader"
+DisplayName = "IF_HuggingFace_downloader"
 Icon = ""
